# oommfpy

./: .gitignore  LICENSE  README.md  build.py  build_extension.py  pyproject.toml  setup.py
.github/workflows/: manual-build-and-publish.yml  manual-build.yml  manual-publish.yml  manual-test.yml
doc/ipynb/: basics.ipynb  basics.py
oommfpy/: __about__.py  __init__.py  oommfpy.py  plot.py
oommfpy/tools/: __init__.py  omf2vtk.py  plot.py  plot_omf.py  plot_slices.py  plot_tools.py
oommfpy/tools/clib/: clib.h  clib.pyx  vtk_writer.c
oommfpy/tools/clib/tmp/: ovf_reader.c
test/: MK_skyrmion_Cnv_temperature.mif  MK_skyrmion_Cnv_temperature_relax.mif  Makefile  isolated_sk_DMI_Cnv.mif  test_Cnv_sk_number.py  test_formats.py  test_mif.mif  test_top_charge.omf  test_top_charge.py  test_vtk_writer_clib.py
test/omfs_formats/: test_irreg_b4.omf  test_irreg_b8.omf  test_irreg_txt.omf  test_rect_b4.omf  test_rect_b8.omf  test_rect_txt.omf
tools/: paraview-oommfpy-plugin.py
