# Adding build.py is an experimental feature, so it might change in future
# We need it here to compile the Cython modules
[tool.poetry]
name = "oommfpy"
version = "1.4"
description = "Minimal Python lib to process OOMMF format output files"
authors = ["David Cortés-Ortuño <d.i.cortes@uu.nl>"]
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["oommf", "omf", "python"]
repository = "https://github.com/davidcortesortuno/oommfpy"

[tool.poetry.dependencies]
python = "^3.10,<3.14"
Cython = "^3.0.0"
numpy = "^2.0.0"
click = "^8.1.0"
matplotlib = "^3.7.0"
scipy = "^1.10.0"
hsluv = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
PyVTK = "^0.5.18"

[tool.poetry.scripts]
plot_omf = "oommfpy.tools.plot_slices:plot_omf_slices_cli"
omf2vtk = "oommfpy.tools.omf2vtk:omf2vtk_cli"

[build-system]
requires = ["setuptools", "cython", "poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
 
[tool.poetry.build]
script = "build_extension.py"
generate-setup-file = true
